--- a/notebooks/Aggregate_And_Classify.ipynb
+++ b/notebooks/Aggregate_And_Classify.ipynb
@@ -185,7 +185,7 @@
     "\n",
     "from models.agg import MILClassifier\n",
     "from models.utils.train import train_epoch, val_epoch\n",
-    "from utils.eval import Evaluator\n",
+    "from evaluation.eval import Evaluator\n",
     "\n",
     "\n",
     "EPOCHS = 30\n",
