--- a/notebooks/Aggregate_And_Classify_MLP.ipynb
+++ b/notebooks/Aggregate_And_Classify_MLP.ipynb
@@ -191,7 +191,7 @@
     "\n",
     "from models.MLP import MLP\n",
     "from models.utils.train import train_epoch, val_epoch\n",
-    "from utils.eval import Evaluator\n",
+    "from evaluation.eval import Evaluator\n",
     "\n",
     "\n",
     "EPOCHS = 30\n",
@@ -308,15 +308,6 @@
     "\n",
     "evaluator.finalize(class_freqs)\n",
     "evaluator.save_figs(exp_name.format(foundation_model=foundation_model))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results"
    ]
   },
   {
