--- a/notebooks/Classify_Slides.ipynb
+++ b/notebooks/Classify_Slides.ipynb
@@ -98,7 +98,7 @@
     "from sklearn.metrics import average_precision_score, roc_auc_score\n",
     "\n",
     "from utils.split import train_val_split\n",
-    "from utils.eval import Evaluator\n",
+    "from evaluation.eval import Evaluator\n",
     "\n",
     "\n",
     "def crossval(\n",
