--- a/notebooks/Ensemble.ipynb
+++ b/notebooks/Ensemble.ipynb
@@ -52,7 +52,7 @@
     ")\n",
     "from data_models.Label import Label\n",
     "from models.ensemble import EnsembleClassifier\n",
-    "from utils.eval import Evaluator\n",
+    "from evaluation.eval import Evaluator\n",
     "from utils.load_data import load_data\n",
     "from utils.split import train_val_split_labels, train_val_split_slides"
    ]
