--- a/notebooks/Get_Outputs.ipynb
+++ b/notebooks/Get_Outputs.ipynb
@@ -198,7 +198,7 @@
     "import pandas as pd\n",
     "\n",
     "from models.utils.train import val_epoch\n",
-    "from utils.eval import get_spec_level_probs\n",
+    "from evaluation.eval import get_spec_level_probs\n",
     "\n",
     "from sklearn.metrics import roc_auc_score, average_precision_score\n",
     "from models.agg import MILClassifier\n",
