--- a/notebooks/Heatmaps.ipynb
+++ b/notebooks/Heatmaps.ipynb
@@ -58,6 +58,7 @@
     "    \"/opt/gpudata/skin-cancer/outputs/chkpts/uni/uni-abmil-1_head-fold-3.pt\"\n",
     ")\n",
     "prism_local_model = \"/opt/gpudata/skin-cancer/models/models--paige-ai--Prism/snapshots/cd2eae7b1e6e51f3664e1a575c5bfe7045cc37d4\"\n",
+    "resnet_best_model = \"/opt/gpudata/skin-cancer/outputs/chkpts/resnet18/resnet18-gabmil-8_heads-fold-3.pt\"\n",
     "hf_cache_dir = \"/opt/gpudata/skin-cancer/models\"\n",
     "tile_embeddings_dir = \"/opt/gpudata/skin-cancer/outputs/{foundation_model}/tile_embeddings_sorted\""
    ]
@@ -68,8 +69,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"2\"\n",
+    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(device)\n",
     "\n",
     "\n",
     "def load_model(model_name):\n",
@@ -79,6 +81,9 @@
     "    elif model_name == \"gigapath\":\n",
     "        model = MILClassifier(1536, 4, 1, False).to(device)\n",
     "        model.load_state_dict(torch.load(gigapath_best_model))\n",
+    "    elif model_name == \"resnet18\":\n",
+    "        model = MILClassifier(512, 4, 8, True).to(device)\n",
+    "        model.load_state_dict(torch.load(resnet_best_model))\n",
     "    else:\n",
     "        model = AutoModel.from_pretrained(\n",
     "            prism_local_model,\n",
@@ -114,6 +119,7 @@
     "        with torch.autocast(\"cuda\", torch.float16), torch.inference_mode():\n",
     "            out = model.slide_representations(\n",
     "                tile_embeddings=tile_embeddings[\"tile_embeds\"]\n",
+    "                .float()\n",
     "                .unsqueeze(0)\n",
     "                .to(device)\n",
     "            )\n",
@@ -126,6 +132,9 @@
     "                tile_embeddings[\"tile_embeds\"].unsqueeze(0).to(device),\n",
     "                tile_embeddings[\"pos\"].unsqueeze(0).to(device),\n",
     "            )\n",
+    "            if model_name == \"resnet18\":\n",
+    "                weights = weights.view(8, -1)\n",
+    "                weights = weights.mean(dim=0)\n",
     "            weights = weights.squeeze().detach().cpu().numpy()\n",
     "\n",
     "    return weights, tile_coords"
@@ -137,21 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# slide_ids = [\"660529-6\", \"660370-5\"] # bowens\n",
-    "# slide_ids = [\"660042-3\", \"660506-6\"]  # bcc\n",
-    "# slide_ids = [\"660058-1\"] # scc\n",
-    "slide_ids = [\n",
-    "    \"660524-4\",\n",
-    "    \"660192-4\",\n",
-    "    \"660465-4\",\n",
-    "    \"660192-1\",\n",
-    "    \"660535-4\",\n",
-    "    \"660415-3\",\n",
-    "    \"660152-2\",\n",
-    "    \"660447-2\",\n",
-    "    \"660122-1\",\n",
-    "    \"660032-3\",\n",
-    "]  # bowens round 2\n",
+    "slide_ids = [\"660369-6\", \"660524-2\", \"660109-1\", \"660375-1\"]\n",
     "models = [\"prism\", \"uni\", \"gigapath\"]\n",
     "\n",
     "for m in models:\n",
@@ -173,6 +168,22 @@
    "metadata": {},
    "source": [
     "### Plot the heatmaps - use `gigapath` env"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "os.chdir(\"..\")\n",
+    "\n",
+    "DATA_DIR = os.getenv(\"DATA_DIR\")\n",
+    "OUTPUT_DIR = os.getenv(\"OUTPUT_DIR\")"
    ]
   },
   {
@@ -219,11 +230,11 @@
     "def plot_image(model_name, slide_id):\n",
     "    sample = load_slide(slide_id)\n",
     "    with open(\n",
-    "        f\"attn_comps/weights/{model_name}-{slide_id}-weights-norm.pkl\", \"rb\"\n",
+    "        f\"attn_comps/weights/{model_name}-{slide_id}-weights-clipped.pkl\", \"rb\"\n",
     "    ) as f:\n",
     "        data = pickle.load(f)\n",
     "\n",
-    "    weights = data[\"weights\"]\n",
+    "    weights = np.log(data[\"weights\"])\n",
     "    tile_coords = data[\"coords\"]\n",
     "\n",
     "    # scaled_weights = np.log(weights + 1e-6)\n",
@@ -235,20 +246,20 @@
     "    rects = []\n",
     "    for tile_info in tile_coords:\n",
     "        # change coordinate to the current level from level-0\n",
-    "        # tile location is in the original image cooridnate, while the slide image is after selecting ROI\n",
+    "        # tile location is in the original image coordinate, while the slide image is after selecting ROI\n",
     "        xy = (\n",
     "            (tile_info[\"x\"] - sample[\"origin\"][0]) / downscale_factor,\n",
     "            (tile_info[\"y\"] - sample[\"origin\"][1]) / downscale_factor,\n",
     "        )\n",
     "        rects.append(patches.Rectangle(xy, 256, 256))\n",
-    "    pc = collections.PatchCollection(rects, alpha=1, cmap=\"inferno\")\n",
+    "    pc = collections.PatchCollection(rects, alpha=1, cmap=\"plasma\")\n",
     "    pc.set_array(weights)\n",
-    "    pc.set_clim(vmin=vmin[slide_id], vmax=vmax[slide_id])\n",
+    "    # pc.set_clim(vmin=vmin[slide_id], vmax=vmax[slide_id])\n",
     "    ax.add_collection(pc)\n",
     "    plt.axis(\"off\")\n",
     "    plt.colorbar(pc, ax=ax)\n",
     "    plt.title(f\"{model_name}, slide {slide_id}\")\n",
-    "    plt.savefig(f\"attn_comps/{model_name}-{slide_id}.png\", dpi=300)\n",
+    "    plt.savefig(f\"attn_comps/{model_name}-{slide_id}-orig.png\", dpi=300)\n",
     "    plt.close()"
    ]
   },
@@ -258,21 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# slide_ids = [\"660529-6\", \"660370-5\"] # bowens\n",
-    "# slide_ids = [\"660042-3\", \"660506-6\"]  # bcc\n",
-    "# slide_ids = [\"660058-1\"] # scc\n",
-    "slide_ids = [\n",
-    "    \"660524-4\",\n",
-    "    \"660192-4\",\n",
-    "    # \"660465-4\",\n",
-    "    # \"660192-1\",\n",
-    "    # \"660535-4\",\n",
-    "    # \"660415-3\",\n",
-    "    # \"660152-2\",\n",
-    "    # \"660447-2\",\n",
-    "    # \"660122-1\",\n",
-    "    # \"660032-3\",\n",
-    "]  # bowens round 2\n",
+    "slide_ids = [\"660369-6\", \"660524-2\", \"660109-1\", \"660375-1\"]\n",
     "models = [\"prism\", \"uni\", \"gigapath\"]\n",
     "\n",
     "vmin = {}\n",
@@ -287,7 +284,7 @@
     "            coords = data[\"coords\"]\n",
     "\n",
     "            # clip weights to control for outliers\n",
-    "            min_threshold = np.percentile(data[\"weights\"], 1)\n",
+    "            min_threshold = np.percentile(data[\"weights\"], 0)\n",
     "            max_threshold = np.percentile(data[\"weights\"], 99)\n",
     "            clipped_scores = np.clip(\n",
     "                data[\"weights\"], min_threshold, max_threshold\n",
@@ -296,17 +293,17 @@
     "            weights_dict[m] = clipped_scores\n",
     "            weights.append(clipped_scores)\n",
     "\n",
-    "    concat_weights = np.concatenate(weights)\n",
-    "    mean = concat_weights.mean()\n",
-    "    std = concat_weights.std()\n",
-    "    normalized = (concat_weights - mean) / std\n",
-    "    weights_dict = {k: (v - mean) / std for k, v in weights_dict.items()}\n",
-    "    vmin[slide_id] = normalized.min()\n",
-    "    vmax[slide_id] = normalized.max()\n",
+    "    # concat_weights = np.concatenate(weights)\n",
+    "    # mean = concat_weights.mean()\n",
+    "    # std = concat_weights.std()\n",
+    "    # normalized = (concat_weights - mean) / std\n",
+    "    # weights_dict = {k: (v - mean) / std for k, v in weights_dict.items()}\n",
+    "    vmin[slide_id] = np.log(np.array(weights)).min()\n",
+    "    vmax[slide_id] = np.log(np.array(weights)).max()\n",
     "\n",
     "    for m in models:\n",
     "        with open(\n",
-    "            f\"attn_comps/weights/{m}-{slide_id}-weights-norm.pkl\", \"wb\"\n",
+    "            f\"attn_comps/weights/{m}-{slide_id}-weights-clipped.pkl\", \"wb\"\n",
     "        ) as f:\n",
     "            pickle.dump(\n",
     "                {\n",
@@ -326,7 +323,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "gigapath",
+   "display_name": "gigapath_clone",
    "language": "python",
    "name": "python3"
   },
