--- a/notebooks/Tile_Embed_Inference.ipynb
+++ b/notebooks/Tile_Embed_Inference.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "foundation_model = \"gigapath\"\n",
+    "foundation_model = \"uni\"\n",
     "\n",
     "# get the absolute path for each slide's set of tile embeddings\n",
     "tile_embed_dir = f\"/opt/gpudata/skin-cancer/outputs/{foundation_model}/tile_embeddings_sorted\"\n",
@@ -125,45 +125,46 @@
     "\n",
     "\n",
     "num_labels = 4\n",
-    "embed_dim = 1536\n",
-    "foundation_model = \"gigapath\"\n",
+    "embed_dim = 1024\n",
+    "foundation_model = \"uni\"\n",
     "aggregator = \"abmil-1_head\"\n",
-    "best_fold = 1\n",
-    "model_name = (\n",
-    "    f\"chkpts/{foundation_model}/\"\n",
-    "    f\"{foundation_model}-{aggregator}-fold-{best_fold}.pt\"\n",
-    ")\n",
-    "save_fname = os.path.join(\n",
-    "    OUTPUT_DIR,\n",
-    "    f\"{foundation_model}/preds/\"\n",
-    "    f\"{foundation_model}-{aggregator}-fold-{best_fold}.csv\",\n",
-    ")\n",
+    "folds = list(range(5))\n",
+    "for best_fold in folds:\n",
+    "    model_name = (\n",
+    "        f\"chkpts/{foundation_model}/\"\n",
+    "        f\"{foundation_model}-{aggregator}-fold-{best_fold}.pt\"\n",
+    "    )\n",
+    "    save_fname = os.path.join(\n",
+    "        OUTPUT_DIR,\n",
+    "        f\"{foundation_model}/preds/\"\n",
+    "        f\"{foundation_model}-{aggregator}-fold-{best_fold}.csv\",\n",
+    "    )\n",
     "\n",
-    "model = MILClassifier(embed_dim, num_labels, 1, False).to(device)\n",
-    "model.load_state_dict(\n",
-    "    torch.load(os.path.join(OUTPUT_DIR, model_name), weights_only=True)\n",
-    ")\n",
+    "    model = MILClassifier(embed_dim, num_labels, 1, False).to(device)\n",
+    "    model.load_state_dict(\n",
+    "        torch.load(os.path.join(OUTPUT_DIR, model_name), weights_only=True)\n",
+    "    )\n",
     "\n",
-    "dl = DataLoader(\n",
-    "    SlideEncodingDataset(tile_embed_paths, labels_dict),\n",
-    "    batch_size=1,\n",
-    "    shuffle=False,\n",
-    "    collate_fn=collate_tile_embeds,\n",
-    ")\n",
+    "    dl = DataLoader(\n",
+    "        SlideEncodingDataset(tile_embed_paths, labels_dict),\n",
+    "        batch_size=1,\n",
+    "        shuffle=False,\n",
+    "        collate_fn=collate_tile_embeds,\n",
+    "    )\n",
     "\n",
-    "_, ground_truth, probs, ids = val_epoch(\n",
-    "    model=model,\n",
-    "    dataloader=dl,\n",
-    "    device=device,\n",
-    "    input_keys=[\"tile_embeds\", \"pos\"],\n",
-    "    label_key=\"label\",\n",
-    ")\n",
-    "probs = probs.transpose(0, 1)\n",
-    "probs = {k: probs[i].tolist() for i, k in enumerate(Label._member_names_)}\n",
+    "    _, ground_truth, probs, ids = val_epoch(\n",
+    "        model=model,\n",
+    "        dataloader=dl,\n",
+    "        device=device,\n",
+    "        input_keys=[\"tile_embeds\", \"pos\"],\n",
+    "        label_key=\"label\",\n",
+    "    )\n",
+    "    probs = probs.transpose(0, 1)\n",
+    "    probs = {k: probs[i].tolist() for i, k in enumerate(Label._member_names_)}\n",
     "\n",
-    "pd.DataFrame(\n",
-    "    {\"id\": ids, \"ground_truth\": ground_truth.tolist()} | probs\n",
-    ").to_csv(save_fname, index=False)"
+    "    pd.DataFrame(\n",
+    "        {\"id\": ids, \"ground_truth\": ground_truth.tolist()} | probs\n",
+    "    ).to_csv(save_fname, index=False)"
    ]
   }
  ],
