--- a/notebooks/Slide_Embed_Inference_MLP.ipynb
+++ b/notebooks/Slide_Embed_Inference_MLP.ipynb
@@ -127,41 +127,42 @@
     "embed_dim = 1280\n",
     "foundation_model = \"prism\"\n",
     "aggregator = \"PRISM\"\n",
-    "best_fold = 3\n",
-    "model_name = (\n",
-    "    f\"chkpts/{foundation_model}/\"\n",
-    "    f\"{foundation_model}-{aggregator}-fold-{best_fold}.pt\"\n",
-    ")\n",
-    "save_fname = os.path.join(\n",
-    "    OUTPUT_DIR,\n",
-    "    f\"{foundation_model}/preds/\"\n",
-    "    f\"{foundation_model}-{aggregator}-fold-{best_fold}.csv\",\n",
-    ")\n",
+    "folds = list(range(5))\n",
+    "for best_fold in folds:\n",
+    "    model_name = (\n",
+    "        f\"chkpts/{foundation_model}/\"\n",
+    "        f\"{foundation_model}-{aggregator}-fold-{best_fold}.pt\"\n",
+    "    )\n",
+    "    save_fname = os.path.join(\n",
+    "        OUTPUT_DIR,\n",
+    "        f\"{foundation_model}/preds/\"\n",
+    "        f\"{foundation_model}-{aggregator}-fold-{best_fold}.csv\",\n",
+    "    )\n",
     "\n",
-    "model = MLP(embed_dim, [1024, 512, 256], num_labels).to(device)\n",
-    "model.load_state_dict(\n",
-    "    torch.load(os.path.join(OUTPUT_DIR, model_name), weights_only=True)\n",
-    ")\n",
-    "dl = DataLoader(\n",
-    "    SlideClassificationDataset(embedding_path, slides, labels_dict),\n",
-    "    batch_size=1,\n",
-    "    shuffle=False,\n",
-    "    collate_fn=collate_slide_embeds,\n",
-    ")\n",
+    "    model = MLP(embed_dim, [1024, 512, 256], num_labels).to(device)\n",
+    "    model.load_state_dict(\n",
+    "        torch.load(os.path.join(OUTPUT_DIR, model_name), weights_only=True)\n",
+    "    )\n",
+    "    dl = DataLoader(\n",
+    "        SlideClassificationDataset(embedding_path, slides, labels_dict),\n",
+    "        batch_size=1,\n",
+    "        shuffle=False,\n",
+    "        collate_fn=collate_slide_embeds,\n",
+    "    )\n",
     "\n",
-    "_, ground_truth, probs, ids = val_epoch(\n",
-    "    model=model,\n",
-    "    dataloader=dl,\n",
-    "    device=device,\n",
-    "    input_keys=[\"slide_embed\"],\n",
-    "    label_key=\"label\",\n",
-    ")\n",
-    "probs = probs.transpose(0, 1)\n",
-    "probs = {k: probs[i].tolist() for i, k in enumerate(Label._member_names_)}\n",
+    "    _, ground_truth, probs, ids = val_epoch(\n",
+    "        model=model,\n",
+    "        dataloader=dl,\n",
+    "        device=device,\n",
+    "        input_keys=[\"slide_embed\"],\n",
+    "        label_key=\"label\",\n",
+    "    )\n",
+    "    probs = probs.transpose(0, 1)\n",
+    "    probs = {k: probs[i].tolist() for i, k in enumerate(Label._member_names_)}\n",
     "\n",
-    "pd.DataFrame(\n",
-    "    {\"id\": ids, \"ground_truth\": ground_truth.tolist()} | probs\n",
-    ").to_csv(save_fname, index=False)"
+    "    pd.DataFrame(\n",
+    "        {\"id\": ids, \"ground_truth\": ground_truth.tolist()} | probs\n",
+    "    ).to_csv(save_fname, index=False)"
    ]
   }
  ],
