--- a/notebooks/Aggregate_And_Classify_MLP.ipynb
+++ b/notebooks/Aggregate_And_Classify_MLP.ipynb
@@ -189,7 +189,7 @@
     "from torch import nn\n",
     "from torch.optim import AdamW\n",
     "\n",
-    "from models.MLP import MLP\n",
+    "from models.mlp import MLP\n",
     "from models.utils.train import train_epoch, val_epoch\n",
     "from evaluation.eval import Evaluator\n",
     "\n",
