--- a/notebooks/Slide_Embed_Inference_MLP.ipynb
+++ b/notebooks/Slide_Embed_Inference_MLP.ipynb
@@ -119,7 +119,7 @@
     "    SlideClassificationDataset,\n",
     "    collate_slide_embeds,\n",
     ")\n",
-    "from models.MLP import MLP\n",
+    "from models.mlp import MLP\n",
     "from models.utils.train import val_epoch\n",
     "\n",
     "\n",
