More cleanup and refactoring of notebook functions

--- a/notebooks/classification/Aggregate_And_Classify.ipynb
+++ b/notebooks/classification/Aggregate_And_Classify.ipynb
@@ -20,7 +20,7 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()\n",
-    "os.chdir(\"..\")\n",
+    "os.chdir(\"../..\")\n",
     "\n",
     "DATA_DIR = os.getenv(\"DATA_DIR\")\n",
     "OUTPUT_DIR = os.getenv(\"OUTPUT_DIR\")"
@@ -32,12 +32,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load the labels data with folds\n",
+    "import copy\n",
+    "from typing import Dict, List, Tuple\n",
+    "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.optim import AdamW\n",
+    "from torch.utils.data import DataLoader\n",
     "\n",
-    "from utils.load_data import load_data\n",
-    "from data_models.Label import Label\n",
-    "\n",
+    "from data_processing.datasets import SlideEncodingDataset, collate_tile_embeds\n",
+    "from data_processing.label import Label\n",
+    "from evaluation.eval import Evaluator\n",
+    "from models import MILClassifier\n",
+    "from models.training.train import train_epoch, val_epoch\n",
+    "from models.training.load import get_loaders\n",
+    "from data_processing.load_data import load_data\n",
+    "from data_processing.split import (\n",
+    "    train_val_split_labels,\n",
+    "    train_val_split_slides,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the labels data with folds\n",
     "label_path = os.path.join(DATA_DIR, \"labels/labels.csv\")\n",
     "fold_path = os.path.join(DATA_DIR, \"folds.json\")\n",
     "\n",
@@ -101,8 +125,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_models.Label import Label\n",
-    "\n",
     "class_freqs = {\n",
     "    label: df[label].value_counts(normalize=True).iloc[1]\n",
     "    for label in Label._member_names_\n",
@@ -115,8 +137,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "\n",
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device {device}\")"
@@ -128,14 +148,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict, List, Tuple\n",
-    "\n",
-    "from torch.utils.data import DataLoader\n",
-    "\n",
-    "from data_models.datasets import SlideEncodingDataset, collate_tile_embeds\n",
-    "from utils.split import train_val_split_slides, train_val_split_labels\n",
-    "\n",
-    "\n",
     "def get_loaders(\n",
     "    val_fold: int,\n",
     "    specimens_by_fold: List[List[str]],\n",
@@ -175,26 +187,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import copy\n",
-    "from operator import itemgetter\n",
-    "\n",
-    "import pandas as pd\n",
-    "from sklearn.metrics import average_precision_score, roc_auc_score\n",
-    "from torch import nn\n",
-    "from torch.optim import AdamW\n",
-    "\n",
-    "from models.agg import MILClassifier\n",
-    "from models.utils.train import train_epoch, val_epoch\n",
-    "from evaluation.eval import Evaluator\n",
-    "\n",
-    "\n",
+    "from models.training.load import get_loaders\n",
+    "from functools import partial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "EPOCHS = 30\n",
     "BATCH_SIZE = 16\n",
     "NUM_LABELS = 4\n",
     "PATIENCE = 10\n",
     "\n",
-    "gates = [False]\n",
-    "head_counts = [1]\n",
+    "gates = [False, False, True, True]\n",
+    "head_counts = [1, 8, 1, 8]\n",
     "auroc_keys = [k + \"_auroc\" for k in [\"benign\", \"bowens\", \"bcc\", \"scc\"]]\n",
     "auprc_keys = [k + \"_auprc\" for k in [\"benign\", \"bowens\", \"bcc\", \"scc\"]]\n",
     "results = pd.DataFrame(\n",
@@ -208,17 +217,16 @@
     "    # set experiment-specific variables\n",
     "    gated = gates[exp_idx]\n",
     "    heads = head_counts[exp_idx]\n",
-    "    aggregator = \"gabmil_test\" if gated else \"abmil_test\"\n",
+    "    aggregator = \"gabmil\" if gated else \"abmil\"\n",
     "    save_directory = \"gated\" if gated else \"ungated\"\n",
     "    model_name = (\n",
     "        \"chkpts/{foundation_model}-{aggregator}-{heads}_heads-fold-{i}.pt\"\n",
     "    )\n",
-    "    # exp_name = f\"{foundation_model}/abmil/{save_directory}/{foundation_model}-3_hidden-{heads}_heads\"\n",
-    "    exp_name = (\n",
-    "        f\"{foundation_model}/testing/{foundation_model}-3_hidden-{heads}_heads\"\n",
-    "    )\n",
+    "    exp_name = f\"{foundation_model}/abmil/{save_directory}/{foundation_model}-3_hidden-{heads}_heads\"\n",
     "\n",
-    "    evaluator = Evaluator(Label)\n",
+    "    evaluator = Evaluator(\n",
+    "        Label, foundation_model, aggregator, \"MLP\", labels_onehot\n",
+    "    )\n",
     "\n",
     "    # for each fold, train and validate while saving the best models\n",
     "    # then evaluate the final outputs by generating curves using Evaluator\n",
@@ -226,8 +234,21 @@
     "        print(f\"--------------------FOLD    {i + 1}--------------------\")\n",
     "        # get dataloaders and embed dims for loaded embeddings\n",
     "        train_loader, val_loader = get_loaders(\n",
-    "            i, specimens_by_fold, slides_by_specimen, labels_dict\n",
+    "            val_fold=i,\n",
+    "            specimens_by_fold=specimens_by_fold,\n",
+    "            slides_by_specimen=slides_by_specimen,\n",
+    "            labels_by_specimen=labels_dict,\n",
+    "            train_dataset_class=partial(\n",
+    "                SlideEncodingDataset.from_slide_ids,\n",
+    "                tile_embed_dir=tile_embed_dir,\n",
+    "            ),\n",
+    "            val_dataset_class=partial(\n",
+    "                SlideEncodingDataset.from_slide_ids,\n",
+    "                tile_embed_dir=tile_embed_dir,\n",
+    "            ),\n",
+    "            collate_fn=collate_tile_embeds,\n",
     "        )\n",
+    "\n",
     "        for sample in train_loader:\n",
     "            embed_dim = sample[\"tile_embeds\"].shape[-1]\n",
     "            break\n",
@@ -296,45 +317,13 @@
     "            ),\n",
     "        )\n",
     "\n",
-    "        # extract relevant data from val results for best model\n",
-    "        ids, probs = Evaluator.get_spec_level_probs(\n",
-    "            best_model_data[\"ids\"], best_model_data[\"probs\"]\n",
-    "        )\n",
-    "        labels_onehot_val = np.array(itemgetter(*ids)(labels_onehot))\n",
-    "\n",
-    "        evaluator.fold(probs, labels_onehot_val, i, len(specimens_by_fold))\n",
-    "        auroc = roc_auc_score(\n",
-    "            labels_onehot_val, probs, average=None, multi_class=\"ovr\"\n",
-    "        )\n",
-    "        auroc_dict = {auroc_keys[i]: v for i, v in enumerate(auroc)}\n",
-    "\n",
-    "        auprc = average_precision_score(labels_onehot_val, probs, average=None)\n",
-    "        auprc_dict = {auprc_keys[i]: v for i, v in enumerate(auprc)}\n",
-    "\n",
-    "        model_details = {}\n",
-    "        model_details[\"foundation_model\"] = foundation_model\n",
-    "        model_details[\"aggregator\"] = aggregator\n",
-    "        model_details[\"classifier\"] = \"MLP\"\n",
-    "        model_details[\"fold\"] = i\n",
-    "        model_details = model_details | auroc_dict | auprc_dict\n",
-    "        details_df = pd.Series(model_details)\n",
-    "        results = pd.concat(\n",
-    "            [results, details_df.to_frame().T], ignore_index=True\n",
-    "        )\n",
+    "        evaluator.fold(i, best_model_data, len(specimens_by_fold))\n",
     "\n",
     "    evaluator.finalize(class_freqs)\n",
-    "    evaluator.save_figs(exp_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results.to_csv(\n",
-    "    \"outputs/experiments_by_fold.csv\", sep=\"|\", mode=\"a\", header=False\n",
-    ")"
+    "    evaluator.save_figs(exp_name)\n",
+    "    evaluator.results.to_csv(\n",
+    "        \"outputs/experiments_by_fold.csv\", sep=\"|\", mode=\"a\", header=False\n",
+    "    )"
    ]
   }
  ],
