--- a/notebooks/classification/Aggregate_And_Classify_MLP.ipynb
+++ b/notebooks/classification/Aggregate_And_Classify_MLP.ipynb
@@ -20,7 +20,7 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()\n",
-    "os.chdir(\"..\")\n",
+    "os.chdir(\"../..\")\n",
     "\n",
     "DATA_DIR = os.getenv(\"DATA_DIR\")\n",
     "OUTPUT_DIR = os.getenv(\"OUTPUT_DIR\")"
@@ -32,12 +32,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load the labels data with folds\n",
+    "import copy\n",
+    "from typing import Dict, List, Tuple\n",
+    "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.optim import AdamW\n",
+    "from torch.utils.data import DataLoader\n",
     "\n",
-    "from utils.load_data import load_data\n",
-    "from data_models.Label import Label\n",
-    "\n",
+    "from data_processing.datasets import (\n",
+    "    SlideClassificationDataset,\n",
+    "    collate_slide_embeds,\n",
+    ")\n",
+    "from data_processing.label import Label\n",
+    "from evaluation.eval import Evaluator\n",
+    "from models import MLP\n",
+    "from models.training.train import train_epoch, val_epoch\n",
+    "from models.training.load import get_loaders\n",
+    "from data_processing.load_data import load_data\n",
+    "from data_processing.split import (\n",
+    "    train_val_split_labels,\n",
+    "    train_val_split_slides,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load the labels data with folds\n",
     "label_path = os.path.join(DATA_DIR, \"labels/labels.csv\")\n",
     "fold_path = os.path.join(DATA_DIR, \"folds.json\")\n",
     "embedding_path = os.path.join(\n",
@@ -103,8 +130,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_models.Label import Label\n",
-    "\n",
     "class_freqs = {\n",
     "    label: df[label].value_counts(normalize=True).iloc[1]\n",
     "    for label in Label._member_names_\n",
@@ -117,8 +142,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch\n",
-    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"1\"\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "print(f\"Using device {device}\")"
@@ -130,17 +162,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Dict, List, Tuple\n",
-    "\n",
-    "from torch.utils.data import DataLoader\n",
-    "\n",
-    "from data_models.datasets import (\n",
-    "    SlideClassificationDataset,\n",
-    "    collate_slide_embeds,\n",
-    ")\n",
-    "from utils.split import train_val_split_slides, train_val_split_labels\n",
-    "\n",
-    "\n",
     "def get_loaders(\n",
     "    val_fold: int,\n",
     "    specimens_by_fold: List[List[str]],\n",
@@ -181,19 +202,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import copy\n",
-    "from operator import itemgetter\n",
-    "\n",
-    "import pandas as pd\n",
-    "from sklearn.metrics import average_precision_score, roc_auc_score\n",
-    "from torch import nn\n",
-    "from torch.optim import AdamW\n",
-    "\n",
-    "from models.mlp import MLP\n",
-    "from models.utils.train import train_epoch, val_epoch\n",
-    "from evaluation.eval import Evaluator\n",
-    "\n",
-    "\n",
+    "from models.training.load import get_loaders\n",
+    "from functools import partial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "EPOCHS = 30\n",
     "BATCH_SIZE = 16\n",
     "NUM_LABELS = 4\n",
@@ -219,8 +237,19 @@
     "    print(f\"--------------------FOLD    {i + 1}--------------------\")\n",
     "    # get dataloaders and embed dims for loaded embeddings\n",
     "    train_loader, val_loader = get_loaders(\n",
-    "        i, specimens_by_fold, slides_by_specimen, labels_dict, embedding_path\n",
+    "        val_fold=i,\n",
+    "        specimens_by_fold=specimens_by_fold,\n",
+    "        slides_by_specimen=slides_by_specimen,\n",
+    "        labels_by_specimen=labels_dict,\n",
+    "        train_dataset_class=partial(\n",
+    "            SlideClassificationDataset, slide_embeds_path=embedding_path\n",
+    "        ),\n",
+    "        val_dataset_class=partial(\n",
+    "            SlideClassificationDataset, slide_embeds_path=embedding_path\n",
+    "        ),\n",
+    "        collate_fn=collate_slide_embeds,\n",
     "    )\n",
+    "\n",
     "    for sample in train_loader:\n",
     "        embed_dim = sample[\"slide_embed\"].shape[-1]\n",
     "        break\n",
@@ -281,42 +310,11 @@
     "        ),\n",
     "    )\n",
     "\n",
-    "    # extract relevant data from val results for best model\n",
-    "    ids, probs = Evaluator.get_spec_level_probs(\n",
-    "        best_model_data[\"ids\"], best_model_data[\"probs\"]\n",
-    "    )\n",
-    "    labels_onehot_val = np.array(itemgetter(*ids)(labels_onehot))\n",
-    "\n",
-    "    evaluator.fold(probs, labels_onehot_val, i, len(specimens_by_fold))\n",
-    "\n",
-    "    auroc = roc_auc_score(\n",
-    "        labels_onehot_val, probs, average=None, multi_class=\"ovr\"\n",
-    "    )\n",
-    "    auroc_dict = {auroc_keys[i]: v for i, v in enumerate(auroc)}\n",
-    "\n",
-    "    auprc = average_precision_score(labels_onehot_val, probs, average=None)\n",
-    "    auprc_dict = {auprc_keys[i]: v for i, v in enumerate(auprc)}\n",
-    "\n",
-    "    model_details = {}\n",
-    "    model_details[\"foundation_model\"] = foundation_model\n",
-    "    model_details[\"aggregator\"] = aggregator\n",
-    "    model_details[\"classifier\"] = \"MLP\"\n",
-    "    model_details[\"fold\"] = i\n",
-    "    model_details = model_details | auroc_dict | auprc_dict\n",
-    "    details_df = pd.Series(model_details)\n",
-    "    results = pd.concat([results, details_df.to_frame().T], ignore_index=True)\n",
+    "    evaluator.fold(i, best_model_data, len(specimens_by_fold))\n",
     "\n",
     "evaluator.finalize(class_freqs)\n",
-    "evaluator.save_figs(exp_name.format(foundation_model=foundation_model))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results.to_csv(\n",
+    "evaluator.save_figs(exp_name.format(foundation_model=foundation_model))\n",
+    "evaluator.results.to_csv(\n",
     "    \"outputs/experiments_by_fold.csv\", sep=\"|\", mode=\"a\", header=False\n",
     ")"
    ]
