--- a/notebooks/classification/Classify_Slides.ipynb
+++ b/notebooks/classification/Classify_Slides.ipynb
@@ -10,7 +10,7 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "load_dotenv()\n",
-    "os.chdir(\"..\")\n",
+    "os.chdir(\"../..\")\n",
     "\n",
     "DATA_DIR = os.getenv(\"DATA_DIR\")\n",
     "OUTPUT_DIR = os.getenv(\"OUTPUT_DIR\")"
@@ -22,8 +22,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.load_data import load_data\n",
+    "import pandas as pd\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import average_precision_score, roc_auc_score\n",
+    "from xgboost import XGBClassifier\n",
     "\n",
+    "from data_processing.label import Label\n",
+    "from evaluation.eval import Evaluator\n",
+    "from data_processing.load_data import load_data\n",
+    "from data_processing.split import train_val_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "label_path = os.path.join(DATA_DIR, \"labels/labels.csv\")\n",
     "embedding_path = os.path.join(\n",
     "    OUTPUT_DIR, \"resnet18/slide_embeddings/resnet_slide_embeds_GAP.pkl\"\n",
@@ -56,8 +71,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_models.Label import Label\n",
-    "\n",
     "specimen_df = df.reset_index()[\n",
     "    [\"specimen_id\", \"bowens\", \"scc\", \"bcc\", \"na\"]\n",
     "].drop_duplicates(subset=[\"specimen_id\"])\n",
@@ -94,13 +107,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "from sklearn.metrics import average_precision_score, roc_auc_score\n",
-    "\n",
-    "from utils.split import train_val_split\n",
-    "from evaluation.eval import Evaluator\n",
-    "\n",
-    "\n",
     "def crossval(\n",
     "    clf,\n",
     "    folds: list,\n",
@@ -176,8 +182,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from xgboost import XGBClassifier\n",
-    "\n",
     "clf = XGBClassifier(objective=\"multi:softmax\", num_class=4)\n",
     "xgb = crossval(\n",
     "    clf,\n",
@@ -196,8 +200,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "\n",
     "clf = LogisticRegression(max_iter=1000, solver=\"saga\")\n",
     "lr = crossval(\n",
     "    clf,\n",
@@ -208,19 +210,6 @@
     "    \"GAP\",\n",
     "    \"lr\",\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from sklearn.linear_model import SGDClassifier\n",
-    "\n",
-    "# clf = SGDClassifier(loss=\"log_loss\")\n",
-    "\n",
-    "# crossval(clf, slide_folds, y_onehot, \"prism/global_pooling/prism-sgd_lr\", \"prism\", \"GAP\", \"lr-sgd\")"
    ]
   },
   {
