--- a/notebooks/classification/Get_Outputs.ipynb
+++ b/notebooks/classification/Get_Outputs.ipynb
@@ -118,7 +118,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_models.Label import Label\n",
+    "from data_models.label import Label\n",
     "\n",
     "class_freqs = {\n",
     "    label: df[label].value_counts(normalize=True).iloc[1]\n",
