--- a/notebooks/data_analysis/Data_Characteristics.ipynb
+++ b/notebooks/data_analysis/Data_Characteristics.ipynb
@@ -21,8 +21,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.load_data import load_data\n",
+    "import pandas as pd\n",
     "\n",
+    "from data_models.Label import Label\n",
+    "from utils.load_data import load_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data = load_data(\n",
     "    label_path=os.path.join(DATA_DIR, \"labels/labels.csv\"),\n",
     "    fold_path=os.path.join(DATA_DIR, \"folds.json\"),\n",
@@ -35,8 +45,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n",
     "labels_by_patient = (\n",
     "    data.groupby(\"patient_id\")[\"label\"]\n",
     "    .agg(lambda x: pd.Series.mode(x)[0])\n",
@@ -113,8 +121,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data_models.Label import Label\n",
-    "\n",
     "by_fold_and_pat = data.groupby([\"fold\", \"patient_id\"]).agg(\n",
     "    bowens=(\n",
     "        \"label_pat\",\n",
