--- a/notebooks/embeddings/Pos_Embed_Comparison.ipynb
+++ b/notebooks/embeddings/Pos_Embed_Comparison.ipynb
@@ -18,7 +18,7 @@
    "source": [
     "import os\n",
     "\n",
-    "os.chdir(\"..\")"
+    "os.chdir(\"../..\")"
    ]
   },
   {
@@ -28,7 +28,6 @@
    "outputs": [],
    "source": [
     "# copied and pasted from prov-gigapath implementation\n",
-    "\n",
     "import numpy as np\n",
     "import torch\n",
     "\n",
@@ -154,22 +153,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from models.pos_embedding import PositionalEmbedding, PositionalEmbeddingAlt\n",
+    "from models.pos_embedding import PositionalEmbedding\n",
     "\n",
     "# load my implementation of the gigapath embeds and get embeds\n",
     "my_pos = PositionalEmbedding(1024, 1000)\n",
     "my_pos_emb = my_pos.forward(embeds[\"pos\"].to(torch.long))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# load the mean embedding implementation and get embeds\n",
-    "alt = PositionalEmbeddingAlt(1024, 1000)\n",
-    "alt_emb = alt.forward(embeds[\"pos\"].to(torch.long))"
    ]
   },
   {
@@ -186,16 +174,12 @@
     "similarity = gp_pos_emb @ gp_pos_emb.T\n",
     "plt.imshow(similarity, cmap=\"inferno\")\n",
     "plt.show()\n",
-    "\n",
     "plt.close()\n",
+    "\n",
     "similarity = my_pos_emb @ my_pos_emb.T\n",
     "plt.imshow(similarity, cmap=\"inferno\")\n",
     "plt.show()\n",
-    "\n",
-    "plt.close()\n",
-    "similarity = alt_emb @ alt_emb.T\n",
-    "plt.imshow(similarity, cmap=\"inferno\")\n",
-    "plt.show()"
+    "plt.close()"
    ]
   },
   {
@@ -218,8 +202,7 @@
    "source": [
     "pos_from_coords = coords_to_pos(xy * 256)\n",
     "gp_pos_emb = gp_pos[pos_from_coords, :]\n",
-    "my_pos_emb = my_pos(xy)\n",
-    "alt_emb = alt(xy)"
+    "my_pos_emb = my_pos(xy)"
    ]
   },
   {
@@ -228,20 +211,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.close()\n",
     "similarity = gp_pos_emb @ gp_pos_emb.T\n",
     "plt.imshow(similarity, cmap=\"inferno\")\n",
     "plt.show()\n",
-    "\n",
     "plt.close()\n",
+    "\n",
     "similarity = my_pos_emb @ my_pos_emb.T\n",
     "plt.imshow(similarity, cmap=\"inferno\")\n",
     "plt.show()\n",
-    "\n",
-    "plt.close()\n",
-    "similarity = alt_emb @ alt_emb.T\n",
-    "plt.imshow(similarity, cmap=\"inferno\")\n",
-    "plt.show()"
+    "plt.close()"
    ]
   }
  ],
